--- a/app/header/header.component.html
+++ b/app/header/header.component.html
@@ -36,7 +36,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Users <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a [routerLink]="['/']" >List</a></li>
+            <li><a [routerLink]="['/users']" >List</a></li>
             <li><a [routerLink]="['/']" >Import</a></li>
           </ul>
         </li>
