--- a/app/header/header.component.html
+++ b/app/header/header.component.html
@@ -35,7 +35,7 @@
           </ul>
         </li>
 
-        <li class="nav  navbar-nav">
+        <li class="nav">
           <a [routerLink]="['/users']" >Users </a>
         </li>
         
