--- a/app/exam/create/questions/exam-questions.component.html
+++ b/app/exam/create/questions/exam-questions.component.html
@@ -1,24 +1,29 @@
 <div class="container panel">
     <h2>Defining exam question {{questionForm.value.id}} {{questionForm.value.text}} </h2>
     <form [formGroup]="questionForm" novalidate>
-        <div class="row">
+        <!--<div class="row">
             <div class="form-group col-xs-4">
                 <label>Seqence number</label>
                 <input type="number" min="1" class="form-control" formControlName="seqencialNumber">
             </div>
-        </div>
+        </div>-->
         <div class="form-group">
             <label>Question</label>
             <input type="text" class="form-control" formControlName="text">
         </div>
 
         <div class="form-group">
+            <label>Points for question</label>
+            <input type="number" value="1" min="1" max="100" class="form-control" formControlName="max">
+        </div>
+        
+        <!--<div class="form-group">
             <label>Parent question</label>
             <select formControlName="parentQuestionID" class="form-control">
                 <option [value]="">None</option>
                 <option *ngFor="let item of questions" [value]="item.id" >{{ item.text }}</option>
             </select>
-        </div>
+        </div>-->
 
         <div formArrayName="arguments" class="container panel" style="background-color: lavender ">
             <question-argument [group]="questionForm.controls.arguments" [exam]="currentExam" [questionid]="questionForm.value.id"></question-argument>
@@ -30,7 +35,6 @@
                 <option *ngFor="let qtopic of currentCourse.topics" [value]="qtopic.id" >  {{qtopic.name }} </option>
             </select>
         </div>
-        <!--<question-topics [group]="questionForm.controls.tags" [course]="currentCourse"></question-topics>-->
 
         <div class="btn-group pull-right margin-20" role="group">
             <button type="button" class="form-control" class="btn btn-success" (click)="save(questionForm.value.id)">
