--- a/app/exam/create/questions/question-argument.component.html
+++ b/app/exam/create/questions/question-argument.component.html
@@ -10,21 +10,21 @@
             <input type="text" class="form-control" formControlName="text">
         </div>
 
-        <div class="form-group">
+        <!--<div class="form-group">
             <label>Parent argument</label>
             <select formControlName="parentArgumentID" class="form-control">
                 <option *ngFor="let item of arguments.value" [value]="item.id" >{{ item.text }}</option>
             </select>
+        </div>-->
+
+        <div class="form-group">
+            <label>Points to be deducted for mistake</label>
+            <input type="number" value="1" min="1" max="100" class="form-control" formControlName="defaultWeight">
         </div>
 
         <div class="form-group">
             <label>Advice</label>
             <input type="text" class="form-control" formControlName="advice">
-        </div>
-
-        <div class="form-group">
-            <label>Points to be deducted for mistake</label>
-            <input type="number" value="1" min="1" max="100" class="form-control" formControlName="defaultWeight">
         </div>
 
         <div class="form-group panel-body" style="background-color:beige">
